--- a/styles.css
+++ b/styles.css
@@ -838,3 +838,13 @@ section {
     text-align: center;
     padding: 30px 0;
 }
+.nav-logo a {
+    font-size: 28px;
+    font-weight: bold;
+    color: #000000;
+    text-decoration: none;
+    background: black;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
